tests/expectations/compiler/futures/future_parameter_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372116]: Futures may only appear as parameters to async functions.
    --> compiler-test:4:28
     |
   4 |     async transition first(x: Future) -> Future {
     |                            ^^^^^^^^^
Error [ETYC0372116]: Futures may only appear as parameters to async functions.
    --> compiler-test:8:23
     |
   8 |     transition second(x: Future) -> u8 {
     |                       ^^^^^^^^^
Error [ETYC0372116]: Futures may only appear as parameters to async functions.
    --> compiler-test:12:20
     |
  12 |     function third(x: Future) -> u8 {
     |                    ^^^^^^^^^
"""]
